Implement redux selector; add test cases

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-typescript": "^2.10.0",
     "gulp-watch": "^4.3.5",
+    "immutable": "^3.7.6",
     "should": "^8.0.1",
     "yargs": "^3.31.0"
   }
