Refactor; Add more test

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-typescript": "^2.10.0",
     "gulp-watch": "^4.3.5",
     "immutable": "^3.7.6",
+    "lodash": "^4.2.1",
     "should": "^8.0.1",
     "yargs": "^3.31.0"
   }
