--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Selector library for Redux written in TypeScript.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zhenwenc/redux-selector.git"
   },
   "keywords": [
-    "redux"
+    "redux",
+    "reselect",
+    "redux-selector"
   ],
   "author": "Zhenwen Cai",
   "license": "ISC",
@@ -24,6 +26,7 @@
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.2.0",
     "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.2.0",
     "gulp-typescript": "^2.10.0",
     "gulp-watch": "^4.3.5",
