--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-watch": "^4.3.5",
     "immutable": "^3.7.6",
     "lodash": "^4.2.1",
+    "merge2": "^1.0.1",
     "should": "^8.0.1",
     "yargs": "^3.31.0"
   }
